--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
     "# 1. Write simple function 'predict_y' that takes in matrix X of observations and a vector of feature weights w and outputs a vector of predictions for the various observations.\n",
     "import numpy as np\n",
     "\n",
-    "def predict_y(m,w): #\n",
+    "def predict_y(m,w): #m = Matrix\n",
     "    return np.dot(m,w)"
    ]
   },
