--- a/index.ipynb
+++ b/index.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Write simple function 'predict_y' that takes in matrix X of observations and a vector of feature weights w\n",
-    "and outputs a vector of predictions for the various observations.\n",
+    "# 1. Write simple function 'predict_y' that takes in a.matrix X of observations and a vector of feature weights w\n",
+    "#and outputs a vector of predictions for the various observations.\n",
     "import numpy as np\n",
     "\n",
     "def predict_y(m,w): #m = Matrix\n",
