Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Write simple function 'predict_y' that takes in a.matrix X of observations and a vector of feature weights w\n",
+    "# 1. Write simple function 'predict_y' that takes in a: matrix X of observations ; a vector of feature weights w\n",
     "#and outputs a vector of predictions for the various observations.\n",
     "import numpy as np\n",
     "\n",
