--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2. Your code here\n",
+    "#2. Write sigmoid function Your code here\n",
     "\n",
     "def sigmoid(x):\n",
     "    x = np.array(x)\n",
