Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2. Write sigmoid function where x is the input and the function outputs the result of the sigmoid function.\n",
+    "#2. Write sigmoid function where x is the input and outputs the result of the sigmoid function.\n",
     "\n",
     "def sigmoid(x):\n",
     "    x = np.array(x)\n",
