Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "#\n",
+    "#3. Graph the sigmoid func\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
