Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "x = np.linspace(start=-20, stop=20, num=10**4)\n",
+    "x = np.linspace(start=-20, stop=20, num=10)\n",
     "y = []\n",
     "for i in x:\n",
     "    y.append(sigmoid(i))\n",
