Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
     "%matplotlib inline\n",
     "\n",
     "x = np.linspace(start=-20, stop=20, num=10000)\n",
-    "y = [sigmoid(i) for \n",
+    "y = [sigmoid(i) for i in x]\n",
     "for i in x:\n",
     "    y.append(sigmoid(i))\n",
     "# [sigmoid(xi) for xi in x]\n",
