Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#4. write a G\n",
+    "#4. write a GD function with sigmoid\n",
+    "\n",
     "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):\n",
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
     "    if initial_weights == None:\n",
