Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -171,8 +171,8 @@
    "source": [
     "#4. write a GD function with sigmoid\n",
     "\n",
-    "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):\n",
-    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\"\n",
+    "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):#given\n",
+    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" \n",
     "    if initial_weights == None:\n",
     "        initial_weights = np.ones((X.shape[1],1)).flatten()\n",
     "#     weights_col= pd.DataFrame(initial_weights)\n",
