Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -172,7 +172,7 @@
     "#4. write a GD function with sigmoid\n",
     "\n",
     "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):#given\n",
-    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" \n",
+    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" #given\n",
     "    if initial_weights == None:\n",
     "        initial_weights = np.ones((X.shape[1],1)).flatten()\n",
     "#     weights_col= pd.DataFrame(initial_weights)\n",
