--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,9 @@
     "        #As we saw in the previous lab, calculating the gradient is often the most difficult task.\n",
     "        #Here, your are provided with the closed form solution for the gradient of the log-loss function derived from MLE\n",
     "        #For more details on the derivation, see the additional resources section below.\n",
-    "        gradient = np.dot(X.transpose(),error_vector)#taking the partial derivative with respect \n",
+    "        gradient = np.dot(X.transpose(),error_vector)#given\n",
+    "        \n",
+    "        \n",
     "        #to theta \n",
     "        #Update the weight vector take a step of alpha in direction of gradient \n",
     "        weights += alpha * gradient\n",
