Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,8 +170,8 @@
    "outputs": [],
    "source": [
     "#4. write a GD function with sigmoid\n",
-    "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):#given\n",
-    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" #given\n",
+    "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):#GIVEN\n",
+    "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" #GIVEN\n",
     "\n",
     "    \n",
     "    if initial_weights == None:\n",
@@ -188,7 +188,7 @@
     "        #As we saw in the previous lab, calculating the gradient is often the most difficult task.\n",
     "        #Here, your are provided with the closed form solution for the gradient of the log-loss function derived from MLE\n",
     "        #For more details on the derivation, see the additional resources section below.\n",
-    "        gradient = np.dot(X.transpose(),error_vector)#given\n",
+    "        gradient = np.dot(X.transpose(),error_vector)#GIVEN\n",
     "        \n",
     "        \n",
     "        #to theta \n",
