Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#ALL GIVEN\n",
     "import pandas as pd\n",
     "df = pd.read_csv('heart.csv')\n",
     "X = df[df.columns[:-1]]\n",
