--- a/index.ipynb
+++ b/index.ipynb
@@ -321,22 +321,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+       "array([[1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.ones((X.shape[1],1)).flatten()"
+    "np.ones((X.shape[1],1))"
    ]
   },
   {
