Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -321,22 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function numpy.core.numeric.ones(shape, dtype=None, order='C')>"
+       "(303, 13)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X."
+    "X.shape"
    ]
   },
   {
