Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,10 +157,7 @@
     }
    ],
    "source": [
-    "#pretesting\n",
-    "m = np.matrix([[4,2,1],[4,8,3],[1,1,0]])\n",
-    "test = np.ones(m.shape[1])\n",
-    "test"
+    "#pretesting"
    ]
   },
   {
