Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "#pretesting"
+    "#pretesting for: initial_weights = np.ones((X.shape[1],1)).flatten()"
    ]
   },
   {
