Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -142,26 +142,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1., 1.])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#pretesting for: initial_weights = np.ones((X.shape[1],1)).flatten()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -333,6 +313,7 @@
     }
    ],
    "source": [
+    "#pretesting for: initial_weights = np.ones((X.shape[1],1)).flatten()\n",
     "X.shape"
    ]
   },
