--- a/index.ipynb
+++ b/index.ipynb
@@ -142,20 +142,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'details'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-13e548f836c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;31m#this needs to be an array and not a df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetails\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   4374\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4375\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4376\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4377\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4378\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setattr__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'details'"
-     ]
+     "data": {
+      "text/plain": [
+       "(        age  sex        cp  trestbps      chol  fbs  restecg   thalach  exang  \\\n",
+       " 0  0.708333  1.0  1.000000  0.481132  0.244292  1.0      0.0  0.603053    0.0   \n",
+       " 1  0.166667  1.0  0.666667  0.339623  0.283105  0.0      0.5  0.885496    0.0   \n",
+       " 2  0.250000  0.0  0.333333  0.339623  0.178082  0.0      0.0  0.770992    0.0   \n",
+       " 3  0.562500  1.0  0.333333  0.245283  0.251142  0.0      0.5  0.816794    0.0   \n",
+       " 4  0.583333  0.0  0.000000  0.245283  0.520548  0.0      0.5  0.702290    1.0   \n",
+       " \n",
+       "     oldpeak  slope   ca      thal  \n",
+       " 0  0.370968    0.0  0.0  0.333333  \n",
+       " 1  0.564516    0.0  0.0  0.666667  \n",
+       " 2  0.225806    1.0  0.0  0.666667  \n",
+       " 3  0.129032    1.0  0.0  0.666667  \n",
+       " 4  0.096774    1.0  0.0  0.666667  ,\n",
+       " <bound method NDFrame.describe of           age  sex        cp  trestbps      chol  fbs  restecg   thalach  \\\n",
+       " 0    0.708333  1.0  1.000000  0.481132  0.244292  1.0      0.0  0.603053   \n",
+       " 1    0.166667  1.0  0.666667  0.339623  0.283105  0.0      0.5  0.885496   \n",
+       " 2    0.250000  0.0  0.333333  0.339623  0.178082  0.0      0.0  0.770992   \n",
+       " 3    0.562500  1.0  0.333333  0.245283  0.251142  0.0      0.5  0.816794   \n",
+       " 4    0.583333  0.0  0.000000  0.245283  0.520548  0.0      0.5  0.702290   \n",
+       " 5    0.583333  1.0  0.000000  0.433962  0.150685  0.0      0.5  0.587786   \n",
+       " 6    0.562500  0.0  0.333333  0.433962  0.383562  0.0      0.0  0.625954   \n",
+       " 7    0.312500  1.0  0.333333  0.245283  0.312785  0.0      0.5  0.778626   \n",
+       " 8    0.479167  1.0  0.666667  0.735849  0.166667  1.0      0.5  0.694656   \n",
+       " 9    0.583333  1.0  0.666667  0.528302  0.095890  0.0      0.5  0.786260   \n",
+       " 10   0.520833  1.0  0.000000  0.433962  0.257991  0.0      0.5  0.679389   \n",
+       " 11   0.395833  0.0  0.666667  0.339623  0.340183  0.0      0.5  0.519084   \n",
+       " 12   0.416667  1.0  0.333333  0.339623  0.319635  0.0      0.5  0.763359   \n",
+       " 13   0.729167  1.0  1.000000  0.150943  0.194064  0.0      0.0  0.557252   \n",
+       " 14   0.604167  0.0  1.000000  0.528302  0.358447  1.0      0.0  0.694656   \n",
+       " 15   0.437500  0.0  0.666667  0.245283  0.212329  0.0      0.5  0.664122   \n",
+       " 16   0.604167  0.0  0.666667  0.245283  0.488584  0.0      0.5  0.770992   \n",
+       " 17   0.770833  0.0  1.000000  0.528302  0.228311  0.0      0.5  0.328244   \n",
+       " 18   0.291667  1.0  0.000000  0.528302  0.276256  0.0      0.5  0.763359   \n",
+       " 19   0.833333  0.0  1.000000  0.433962  0.257991  0.0      0.5  0.610687   \n",
+       " 20   0.625000  1.0  0.000000  0.386792  0.246575  0.0      0.5  0.687023   \n",
+       " 21   0.312500  1.0  0.666667  0.339623  0.244292  0.0      0.5  0.824427   \n",
+       " 22   0.270833  1.0  0.000000  0.433962  0.228311  0.0      0.5  0.816794   \n",
+       " 23   0.666667  1.0  0.666667  0.528302  0.267123  1.0      0.5  0.503817   \n",
+       " 24   0.229167  1.0  1.000000  0.433962  0.166667  0.0      0.5  0.816794   \n",
+       " 25   0.875000  0.0  0.333333  0.622642  0.401826  0.0      0.5  0.694656   \n",
+       " 26   0.625000  1.0  0.666667  0.528302  0.196347  1.0      0.5  0.656489   \n",
+       " 27   0.458333  1.0  0.666667  0.150943  0.111872  0.0      0.5  0.396947   \n",
+       " 28   0.750000  0.0  0.666667  0.433962  0.664384  1.0      0.0  0.656489   \n",
+       " 29   0.500000  1.0  0.666667  0.339623  0.162100  1.0      0.0  0.618321   \n",
+       " ..        ...  ...       ...       ...       ...  ...      ...       ...   \n",
+       " 273  0.604167  1.0  0.000000  0.056604  0.246575  0.0      0.5  0.648855   \n",
+       " 274  0.375000  1.0  0.000000  0.150943  0.340183  0.0      0.0  0.358779   \n",
+       " 275  0.479167  1.0  0.000000  0.292453  0.196347  0.0      0.5  0.740458   \n",
+       " 276  0.604167  1.0  0.000000  0.490566  0.210046  0.0      0.5  0.259542   \n",
+       " 277  0.583333  1.0  0.333333  0.283019  0.308219  0.0      0.5  0.534351   \n",
+       " 278  0.604167  0.0  0.333333  0.396226  0.440639  1.0      0.0  0.618321   \n",
+       " 279  0.666667  1.0  0.000000  0.415094  0.091324  0.0      0.0  0.412214   \n",
+       " 280  0.270833  1.0  0.000000  0.396226  0.431507  0.0      0.5  0.412214   \n",
+       " 281  0.479167  1.0  0.000000  0.320755  0.178082  1.0      0.5  0.648855   \n",
+       " 282  0.625000  1.0  0.666667  0.301887  0.210046  1.0      0.5  0.480916   \n",
+       " 283  0.229167  1.0  0.000000  0.547170  0.221461  0.0      0.5  0.839695   \n",
+       " 284  0.666667  1.0  0.000000  0.433962  0.184932  0.0      0.0  0.511450   \n",
+       " 285  0.354167  1.0  0.000000  0.433962  0.422374  0.0      0.5  0.374046   \n",
+       " 286  0.625000  1.0  1.000000  0.377358  0.178082  0.0      0.5  0.694656   \n",
+       " 287  0.583333  1.0  0.333333  0.566038  0.242009  0.0      0.0  0.709924   \n",
+       " 288  0.583333  1.0  0.000000  0.150943  0.477169  0.0      0.5  0.549618   \n",
+       " 289  0.541667  0.0  0.000000  0.320755  0.180365  0.0      1.0  0.450382   \n",
+       " 290  0.666667  1.0  0.000000  0.509434  0.175799  0.0      0.5  0.687023   \n",
+       " 291  0.604167  1.0  0.000000  0.188679  0.438356  0.0      1.0  0.526718   \n",
+       " 292  0.604167  0.0  0.000000  0.716981  0.226027  1.0      0.0  0.572519   \n",
+       " 293  0.791667  1.0  0.666667  0.547170  0.196347  0.0      0.0  0.603053   \n",
+       " 294  0.312500  1.0  0.000000  0.245283  0.098174  0.0      0.5  0.557252   \n",
+       " 295  0.708333  1.0  0.000000  0.433962  0.139269  0.0      0.0  0.557252   \n",
+       " 296  0.708333  0.0  0.000000  0.283019  0.162100  0.0      0.5  0.496183   \n",
+       " 297  0.625000  1.0  0.000000  0.660377  0.114155  1.0      0.0  0.145038   \n",
+       " 298  0.583333  0.0  0.000000  0.433962  0.262557  0.0      0.5  0.396947   \n",
+       " 299  0.333333  1.0  1.000000  0.150943  0.315068  0.0      0.5  0.465649   \n",
+       " 300  0.812500  1.0  0.000000  0.471698  0.152968  1.0      0.5  0.534351   \n",
+       " 301  0.583333  1.0  0.000000  0.339623  0.011416  0.0      0.5  0.335878   \n",
+       " 302  0.583333  0.0  0.333333  0.339623  0.251142  0.0      0.0  0.786260   \n",
+       " \n",
+       "      exang   oldpeak  slope    ca      thal  target  \n",
+       " 0      0.0  0.370968    0.0  0.00  0.333333     1.0  \n",
+       " 1      0.0  0.564516    0.0  0.00  0.666667     1.0  \n",
+       " 2      0.0  0.225806    1.0  0.00  0.666667     1.0  \n",
+       " 3      0.0  0.129032    1.0  0.00  0.666667     1.0  \n",
+       " 4      1.0  0.096774    1.0  0.00  0.666667     1.0  \n",
+       " 5      0.0  0.064516    0.5  0.00  0.333333     1.0  \n",
+       " 6      0.0  0.209677    0.5  0.00  0.666667     1.0  \n",
+       " 7      0.0  0.000000    1.0  0.00  1.000000     1.0  \n",
+       " 8      0.0  0.080645    1.0  0.00  1.000000     1.0  \n",
+       " 9      0.0  0.258065    1.0  0.00  0.666667     1.0  \n",
+       " 10     0.0  0.193548    1.0  0.00  0.666667     1.0  \n",
+       " 11     0.0  0.032258    1.0  0.00  0.666667     1.0  \n",
+       " 12     0.0  0.096774    1.0  0.00  0.666667     1.0  \n",
+       " 13     1.0  0.290323    0.5  0.00  0.666667     1.0  \n",
+       " 14     0.0  0.161290    1.0  0.00  0.666667     1.0  \n",
+       " 15     0.0  0.258065    0.5  0.00  0.666667     1.0  \n",
+       " 16     0.0  0.000000    1.0  0.00  0.666667     1.0  \n",
+       " 17     0.0  0.419355    0.0  0.00  0.666667     1.0  \n",
+       " 18     0.0  0.241935    1.0  0.00  0.666667     1.0  \n",
+       " 19     0.0  0.290323    1.0  0.50  0.666667     1.0  \n",
+       " 20     0.0  0.080645    0.5  0.00  1.000000     1.0  \n",
+       " 21     1.0  0.064516    1.0  0.00  0.666667     1.0  \n",
+       " 22     0.0  0.000000    1.0  0.00  0.666667     1.0  \n",
+       " 23     1.0  0.161290    0.5  0.00  0.666667     1.0  \n",
+       " 24     1.0  0.225806    1.0  0.00  1.000000     1.0  \n",
+       " 25     0.0  0.064516    1.0  0.50  0.666667     1.0  \n",
+       " 26     0.0  0.258065    1.0  0.00  0.666667     1.0  \n",
+       " 27     0.0  0.096774    1.0  0.00  0.666667     1.0  \n",
+       " 28     0.0  0.129032    1.0  0.25  0.666667     1.0  \n",
+       " 29     0.0  0.193548    0.0  0.00  0.666667     1.0  \n",
+       " ..     ...       ...    ...   ...       ...     ...  \n",
+       " 273    0.0  0.016129    1.0  0.25  1.000000     0.0  \n",
+       " 274    1.0  0.161290    0.5  0.25  0.666667     0.0  \n",
+       " 275    0.0  0.161290    1.0  0.50  1.000000     0.0  \n",
+       " 276    0.0  0.322581    0.5  0.25  1.000000     0.0  \n",
+       " 277    0.0  0.048387    1.0  0.00  1.000000     0.0  \n",
+       " 278    0.0  0.000000    1.0  0.50  0.666667     0.0  \n",
+       " 279    1.0  0.580645    0.5  0.25  0.666667     0.0  \n",
+       " 280    1.0  0.290323    0.5  0.00  0.333333     0.0  \n",
+       " 281    1.0  0.161290    0.5  0.00  0.000000     0.0  \n",
+       " 282    0.0  0.354839    0.5  0.25  0.333333     0.0  \n",
+       " 283    0.0  0.000000    1.0  0.00  1.000000     0.0  \n",
+       " 284    1.0  0.306452    1.0  0.25  1.000000     0.0  \n",
+       " 285    1.0  0.290323    0.5  0.50  1.000000     0.0  \n",
+       " 286    0.0  0.129032    1.0  0.50  0.666667     0.0  \n",
+       " 287    0.0  0.000000    1.0  0.25  0.666667     0.0  \n",
+       " 288    1.0  0.483871    0.5  0.25  1.000000     0.0  \n",
+       " 289    1.0  0.322581    0.5  0.25  1.000000     0.0  \n",
+       " 290    0.0  0.000000    1.0  0.25  1.000000     0.0  \n",
+       " 291    0.0  0.709677    0.0  0.75  0.333333     0.0  \n",
+       " 292    1.0  0.451613    0.5  0.50  0.333333     0.0  \n",
+       " 293    0.0  0.129032    0.5  0.00  1.000000     0.0  \n",
+       " 294    1.0  0.451613    0.0  0.00  0.333333     0.0  \n",
+       " 295    1.0  0.645161    1.0  0.50  1.000000     0.0  \n",
+       " 296    1.0  0.000000    0.5  0.00  0.666667     0.0  \n",
+       " 297    0.0  0.161290    0.5  0.50  0.333333     0.0  \n",
+       " 298    1.0  0.032258    0.5  0.00  1.000000     0.0  \n",
+       " 299    0.0  0.193548    0.5  0.00  1.000000     0.0  \n",
+       " 300    0.0  0.548387    0.5  0.50  1.000000     0.0  \n",
+       " 301    1.0  0.193548    0.5  0.25  1.000000     0.0  \n",
+       " 302    0.0  0.000000    0.5  0.25  0.666667     0.0  \n",
+       " \n",
+       " [303 rows x 14 columns]>)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -164,7 +301,7 @@
     "df = pd.read_csv('heart.csv')\n",
     "X = df[df.columns[:-1]]\n",
     "y = df.target#this needs to be an array and not a df\n",
-    "X.head()"
+    "X.head(), df.describe"
    ]
   },
   {
