--- a/index.ipynb
+++ b/index.ipynb
@@ -314,7 +314,7 @@
    ],
    "source": [
     "#pretesting for: initial_weights = np.ones((X.shape[1],1)).flatten()\n",
-    "X.shape #303 rows × 13 columns"
+    "X.shape # there are 303 rows × 13 columns"
    ]
   },
   {
