--- a/index.ipynb
+++ b/index.ipynb
@@ -363,6 +363,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.ones((X.shape[1],1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     ".flatten()"
    ]
   },
