--- a/index.ipynb
+++ b/index.ipynb
@@ -359,20 +359,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.],\n",
+       "       [1.]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.ones((X.shape[1],1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ".flatten()"
+    "np.ones((X.shape[1],1)).flatten()"
    ]
   },
   {
