--- a/index.ipynb
+++ b/index.ipynb
@@ -419,8 +419,8 @@
     "def grad_desc(X, y, max_iterations, alpha, initial_weights=None):#GIVEN\n",
     "    \n",
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" #GIVEN\n",
-    "    if initial_weights == None: #when init wie\n",
-    "        initial_weights = np.ones((X.shape[1],1)).flatten()\n",
+    "    if initial_weights == None: #when init weights = none:\n",
+    "        initial_weights = np.ones((X.shape[1],1)).flatten() create a \n",
     "#     weights_col= pd.DataFrame(initial_weights)\n",
     "    weights = initial_weights #updating initial weights\n",
     "    #Create a for loop of iterations\n",
