Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
     "    \n",
     "    \"\"\"Be sure to set default behavior for the initial_weights parameter.\"\"\" #GIVEN\n",
     "    if initial_weights == None: #when init weights = none:\n",
-    "        initial_weights = np.ones((X.shape[1],1)).flatten() #create a flattened vector of 1's as long as the X \n",
+    "        initial_weights = np.ones((X.shape[1],1)).flatten() #create a flattened vector w/ 1's as long as the X \n",
     "        \n",
     "#     weights_col= pd.DataFrame(initial_weights)\n",
     "    weights = initial_weights #updating initial weights\n",
