--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
     }
    ],
    "source": [
-    "np.ones((X.shape[1],1)).flatten()"
+    "np.ones((X.shape[1],1)).flatten() #create a flattened vector w/ 1's as long as the X given"
    ]
   },
   {
