Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -415,7 +415,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pretesting for "
+    "#pretesting for weights_col= pd.DataFrame(initial_weights)"
    ]
   },
   {
