--- a/index.ipynb
+++ b/index.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -400,13 +400,14 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.ones((X.shape[1],1)).flatten() #create a flattened vector w/ 1's as long as the X given"
+    "initial_weights = np.ones((X.shape[1],1)).flatten() #create a flattened vector w/ 1's as long as the X given\n",
+    "initial_weights"
    ]
   },
   {
