--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pretesting for weights_col= pd.DataFrame(initial_weights)"
+    "#pretesting for weights_col= pd.DataFrame(initial_weights)\n",
+    "\n"
    ]
   },
   {
