Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -521,7 +521,7 @@
    "source": [
     "#pretesting for weights_col= pd.DataFrame(initial_weights)\n",
     "\n",
-    "pd.DataFrame(initial_weights)\n"
+    "pd.DataFrame(initial_weights) #turns vec\n"
    ]
   },
   {
