Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -537,7 +537,7 @@
     "    if initial_weights == None: #when init weights = none:\n",
     "        initial_weights = np.ones((X.shape[1],1)).flatten() #create a flattened vector w/ 1's as long as the X given \n",
     "        \n",
-    "#     weights_col= pd.DataFrame(initial_weights)\n",
+    "    weights_col= pd.DataFrame(initial_weights)\n",
     "    \n",
     "    weights = initial_weights #updating initial weights\n",
     "    #Create a for loop of iterations\n",
