Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -560,7 +560,7 @@
     "        weights += alpha * gradient\n",
     "#         weights_col = pd.concat([weights_col, pd.DataFrame(weights)], axis=1)\n",
     "    #Return finalized Weights\n",
-    "    return weights, #return weights as a df"
+    "    return weights, weights_co #return weights and weights as a df"
    ]
   },
   {
