--- a/index.ipynb
+++ b/index.ipynb
@@ -526,6 +526,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pretesting for sigmoid(np.dot(X,weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
