Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -530,7 +530,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pretesting for sigmoid(np.dot(X,weights)"
+    "#pretesting for sigmoid(np.dot(X,weights)\n",
+    "\n"
    ]
   },
   {
