Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -531,7 +531,8 @@
    "outputs": [],
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
-    "\n"
+    "\n",
+    "np.dot(X,i"
    ]
   },
   {
