Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -526,17 +526,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5.74111216, 5.07273998, 3.76450365, 5.50475072, 5.31489523,\n",
-       "       4.15361625, 3.71565553, 5.48252769, 7.32365071, 6.08518302])"
+       "(array([5.74111216, 5.07273998, 3.76450365, 5.50475072, 5.31489523,\n",
+       "        4.15361625, 3.71565553, 5.48252769, 7.32365071, 6.08518302]), 303)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "np.dot(X,initial_weights)[0:10], "
+    "np.dot(X,initial_weights)[0:10], len(np.dot(X,initial_weights))"
    ]
   },
   {
