Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,7 +544,8 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "np.dot(X,initial_weights)[0:10], len(np.dot(X,initial_weights))"
+    "np.dot(X,initial_weights)[0:10], /n\n",
+    "len(np.dot(X,initial_weights))"
    ]
   },
   {
