--- a/index.ipynb
+++ b/index.ipynb
@@ -526,17 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([5.74111216, 5.07273998, 3.76450365, 5.50475072, 5.31489523,\n",
-       "        4.15361625, 3.71565553, 5.48252769, 7.32365071, 6.08518302]), 303)"
+       "303"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +543,7 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "np.dot(X,initial_weights)[0:10], /n\n",
+    "np.dot(X,initial_weights)[0:10],\n",
     "len(np.dot(X,initial_weights))"
    ]
   },
