Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -526,16 +526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5.74111216 5.07273998 3.76450365 5.50475072 5.31489523 4.15361625\n",
+      " 3.71565553 5.48252769 7.32365071 6.08518302]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "303"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +551,7 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "np.dot(X,initial_weights)[0:10],\n",
+    "print(np.dot(X,initial_weights)[0:10])\n",
     "len(np.dot(X,initial_weights))"
    ]
   },
