Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,6 +557,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sigmoidnp.dot(X,initial_weights)[0:10])\n",
+    "len(np.dot(X,initial_weights))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
