Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -561,8 +561,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(sigmoidnp.dot(X,initial_weights)[0:10])\n",
-    "len(np.dot(X,initial_weights))"
+    "print(sigmoid(np.dot(X,initial_weights)[0:10]))\n",
+    "len(sigmonp.dot(X,initial_weights))"
    ]
   },
   {
