Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -557,12 +557,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99679908 0.99377378 0.97734599 0.99594907 0.99510627 0.9845354\n",
+      " 0.97623885 0.99585842 0.99934069 0.99772882]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "303"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(sigmoid(np.dot(X,initial_weights)[0:10]))\n",
-    "len(sigmonp.dot(X,initial_weights))"
+    "len(sigmoid(np.dot(X,initial_weights)))"
    ]
   },
   {
