Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "print(np.dot(X,initial_weights)[0:10])\n",
+    "print(np.dot(X,initial_weights)[0:10]) runs all t\n",
     "len(np.dot(X,initial_weights))"
    ]
   },
@@ -580,7 +580,7 @@
     }
    ],
    "source": [
-    "print(sigmoid(np.dot(X,initial_weights)[0:10]))\n",
+    "print(sigmoid(np.dot(X,initial_weights)[0:10])) \n",
     "len(sigmoid(np.dot(X,initial_weights)))"
    ]
   },
