--- a/index.ipynb
+++ b/index.ipynb
@@ -551,7 +551,7 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "print(np.dot(X,initial_weights)[0:10]) runs all t\n",
+    "print(np.dot(X,initial_weights)[0:10]) #runs the do\n",
     "len(np.dot(X,initial_weights))"
    ]
   },
