--- a/index.ipynb
+++ b/index.ipynb
@@ -551,8 +551,8 @@
    "source": [
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
-    "print(np.dot(X,initial_weights)[0:10]) #runs the dot prod of all the X\n",
-    "len(np.dot(X,initial_weights))"
+    "print(np.dot(X,initial_weights)[0:10]) #runs the dot prod of all the X columns and the weights\n",
+    "len(np.dot(X,initial_weights)) "
    ]
   },
   {
