Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -552,7 +552,7 @@
     "#pretesting for sigmoid(np.dot(X,weights)\n",
     "\n",
     "print(np.dot(X,initial_weights)[0:10]) #runs the dot prod of all the X columns and the weights\n",
-    "len(np.dot(X,initial_weights)) "
+    "len(np.dot(X,initial_weights)) #there are 303 rows total"
    ]
   },
   {
