Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# 1. Write simple function 'predict_y' that takes in a: matrix X of observations ; b: vector of feature weights w\n",
     "#and c: outputs a vector of predictions for the various observations.\n",
-    "#NOTE this function\n",
+    "#NOTE this function wont be used later, just an intro ex\n",
     "import numpy as np\n",
     "\n",
     "def predict_y(m,w): #m = Matrix\n",
