Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,7 @@
     "    for iteration in range(max_iterations):\n",
     "        \n",
     "        #Generate predictions using the current feature weights\n",
-    "        predictions = sigmoid(np.dot(X,weights))\n",
+    "        predictions = sigmoid(np.dot(X,weights)) #runs the dot prod of all the X columns and weights\n",
     "        \n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        error_vector = y - predictions\n",
