--- a/index.ipynb
+++ b/index.ipynb
@@ -607,7 +607,7 @@
     "        \n",
     "        #Generate predictions using the current feature weights\n",
     "        predictions = sigmoid(np.dot(X,weights)) #runs the dot prod of all the X columns and current weights;\n",
-    "        #then \n",
+    "        #then runs the sigmoid function to get a number f\n",
     "        \n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        error_vector = y - predictions\n",
