Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,6 +593,7 @@
    "source": [
     "pretesting for \n",
     "\n",
+    "predictions = sigmoid(np.dot(X,intiaweights))\n",
     "error_vector = y - predictions"
    ]
   },
