Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,7 +593,7 @@
    "source": [
     "pretesting for \n",
     "\n",
-    "predictions = sigmoid(np.dot(X,intiaweights))\n",
+    "predictions = sigmoid(np.dot(X,intial_weights))\n",
     "error_vector = y - predictions"
    ]
   },
