Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -587,77 +587,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      0.003201\n",
-       "1      0.006226\n",
-       "2      0.022654\n",
-       "3      0.004051\n",
-       "4      0.004894\n",
-       "5      0.015465\n",
-       "6      0.023761\n",
-       "7      0.004142\n",
-       "8      0.000659\n",
-       "9      0.002271\n",
-       "10     0.005208\n",
-       "11     0.011427\n",
-       "12     0.004338\n",
-       "13     0.002264\n",
-       "14     0.002439\n",
-       "15     0.015510\n",
-       "16     0.007087\n",
-       "17     0.011639\n",
-       "18     0.005127\n",
-       "19     0.002254\n",
-       "20     0.006522\n",
-       "21     0.001333\n",
-       "22     0.007271\n",
-       "23     0.000575\n",
-       "24     0.000628\n",
-       "25     0.003475\n",
-       "26     0.000826\n",
-       "27     0.006380\n",
-       "28     0.001991\n",
-       "29     0.005784\n",
-       "         ...   \n",
-       "273   -0.995142\n",
-       "274   -0.991861\n",
-       "275   -0.997184\n",
-       "276   -0.994158\n",
-       "277   -0.996281\n",
-       "278   -0.996164\n",
-       "279   -0.996251\n",
-       "280   -0.994144\n",
-       "281   -0.996946\n",
-       "282   -0.998020\n",
-       "283   -0.995215\n",
-       "284   -0.998262\n",
-       "285   -0.998299\n",
-       "286   -0.998734\n",
-       "287   -0.995280\n",
-       "288   -0.998491\n",
-       "289   -0.996188\n",
-       "290   -0.996948\n",
-       "291   -0.996131\n",
-       "292   -0.997281\n",
-       "293   -0.995653\n",
-       "294   -0.988993\n",
-       "295   -0.999074\n",
-       "296   -0.986827\n",
-       "297   -0.993563\n",
-       "298   -0.991067\n",
-       "299   -0.995758\n",
-       "300   -0.999107\n",
-       "301   -0.996711\n",
-       "302   -0.976116\n",
-       "Name: target, Length: 303, dtype: float64"
+       "pandas.core.series.Series"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +606,7 @@
     "\n",
     "predictions = sigmoid(np.dot(X,initial_weights))\n",
     "error_vector = y - predictions\n",
-    "error_vector"
+    "type(error_vector)"
    ]
   },
   {
