Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -606,7 +606,7 @@
     "\n",
     "predictions = sigmoid(np.dot(X,initial_weights))\n",
     "error_vector = y - predictions\n",
-    "type(error_vector)"
+    "type(error_vector"
    ]
   },
   {
