Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -667,7 +667,7 @@
     "\n",
     "predictions = sigmoid(np.dot(X,initial_weights))\n",
     "error_vector = y - predictions\n",
-    "error_vector"
+    "error_vector #finds th"
    ]
   },
   {
