--- a/index.ipynb
+++ b/index.ipynb
@@ -667,7 +667,7 @@
     "\n",
     "predictions = sigmoid(np.dot(X,initial_weights))\n",
     "error_vector = y - predictions\n",
-    "error_vector #finds th"
+    "error_vector #finds all the errors for the 303 points"
    ]
   },
   {
@@ -696,6 +696,7 @@
     "        \n",
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        error_vector = y - predictions\n",
+    "        \n",
     "        #Calculate the gradient \n",
     "        #As we saw in the previous lab, calculating the gradient is often the most difficult task.\n",
     "        #Here, your are provided with the closed form solution for the gradient of the log-loss function derived from MLE\n",
