Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -697,7 +697,7 @@
     "        #Calculate an error vector based on these initial predictions and the correct labels\n",
     "        error_vector = y - predictions\n",
     "        \n",
-    "        #Calculate the gradient \n",
+    "        #Calculate the gradient #GIVEN\n",
     "        gradient = np.dot(X.transpose(),error_vector)\n",
     "        \n",
     "        \n",
