Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -672,6 +672,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ -78.17624594, -113.03491623,  -21.33483763,  -51.85810484,\n",
+       "        -38.77798755,  -21.90509669,  -30.45928284,  -70.28916383,\n",
+       "        -75.60838005,  -34.98625754,  -78.8759409 ,  -40.02670105,\n",
+       "       -115.30634513])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient = np.dot(X.transpose(),error_vector)\n",
+    "gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
