Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -690,7 +690,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#pretesting for gradient\n",
     "gradient = np.dot(X.transpose(),error_vector)\n",
     "gradient"
    ]
