Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -712,7 +712,7 @@
     }
    ],
    "source": [
-    "len(gradient) #finds the "
+    "len(gradient) #finds the partial derivatives for all the Xs"
    ]
   },
   {
