Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -749,7 +749,8 @@
     "        #to theta \n",
     "        #Update the weight vector take a step of alpha in direction of gradient \n",
     "        weights += alpha * gradient\n",
-    "#         weights_col = pd.concat([weights_col, pd.DataFrame(weights)], axis=1)\n",
+    "        \n",
+    "        weights_col = pd.concat([weights_col, pd.DataFrame(weights)], axis=1)\n",
     "    #Return finalized Weights\n",
     "\n",
     "    return weights, weights_col #return weights and weights as a df"
