--- a/index.ipynb
+++ b/index.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,13 +924,13 @@
     }
    ],
    "source": [
-    "#ALL GIVEN\n",
-    "import pandas as pd\n",
-    "df = pd.read_csv('heart.csv')\n",
-    "X = df[df.columns[:-1]]\n",
-    "y = df.target#this needs to be an array and not a df\n",
-    "print(y.value_counts())\n",
-    "X.head()"
+    "# #ALL GIVEN; moved above\n",
+    "# import pandas as pd\n",
+    "# df = pd.read_csv('heart.csv')\n",
+    "# X = df[df.columns[:-1]]\n",
+    "# y = df.target#this needs to be an array and not a df\n",
+    "# print(y.value_counts())\n",
+    "# X.head()"
    ]
   },
   {
