--- a/index.ipynb
+++ b/index.ipynb
@@ -998,7 +998,7 @@
     }
    ],
    "source": [
-    "weights= grad_desc(X, y, 10000, 0.001)\n",
+    "weights, weight_col = grad_desc(X, y, 10000, 0.001)\n",
     "weights"
    ]
   },
