Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -953,7 +953,16 @@
    ],
    "source": [
     "weights, weight_col = grad_desc(X, y, 10000, 0.001)\n",
-    "weights 3"
+    "weights #OUR BEST FIT COEFFICIENTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WEIGH"
    ]
   },
   {
