--- a/index.ipynb
+++ b/index.ipynb
@@ -1383,10 +1383,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Int64Index([    0,     1,     2,     3,     4,     5,     6,     7,     8,\n",
+       "                9,\n",
+       "            ...\n",
+       "             9991,  9992,  9993,  9994,  9995,  9996,  9997,  9998,  9999,\n",
+       "            10000],\n",
+       "           dtype='int64', length=10001)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weight_col.columns = np.arange(len(weight_col.columns))\n",
+    "weight_col.columns"
+   ]
   },
   {
    "cell_type": "code",
